--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <div class="container">
       <!-- Brand and toggle get grouped for better mobile display -->
-      <div class="navbar-header">
+      <!-- <div class="navbar-header"> -->
         <!-- <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
@@ -47,7 +47,10 @@
         <!-- <a class="navbar-brand" href="#"><img src="./img/dbdLogo.png" height="90" width="200" /></a> -->
 
         <a class="navbar-brand" href="#">DesignsByDali</a>
-      </div>
+
+          <!-- /.row -->
+
+      <!-- </div> -->
       <!-- Collect the nav links, forms, and other content for toggling -->
       <!-- <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
@@ -63,6 +66,18 @@
         </ul>
       </div> -->
       <!-- /.navbar-collapse -->
+      <footer class="footer">
+        <div class="row">
+          <div class="col-lg-12 menu">
+            <a href="https://github.com/designsbydali" target="_blank"><i class="fa fa-github-square fa-3x hvr-float" aria-hidden="true"></i></a>
+            <a href="https://twitter.com/dalishirish" target="_blank"><i class="fa fa-twitter fa-3x hvr-float"  aria-hidden="true"></i></a>
+            <a href="https://www.linkedin.com/in/designsbydali?trk=hp-identity-name" target="_blank"><i class="fa fa-linkedin-square fa-3x hvr-float" aria-hidden="true"></i></a>
+            <a href="https://medium.com/@shirishdali" target="_blank"><i class="fa fa-medium fa-3x hvr-float"  aria-hidden="true"></i></a>
+
+          </div>
+        </div>
+      </footer>
+
     </div>
     <!-- /.container -->
   </nav>
@@ -192,7 +207,7 @@
         <div id="education">
           <section class="ga body-text">
             <h3 class="right-title title">Education</h3>
-            <h3 class="sub-title">Full-Stack Web Developer</h3>
+            <h3 class="sub-title">Web Developer</h3>
             <p class="city">General Assembly, Austin</p>
             <p class="date">October 2016</p>
 
@@ -223,7 +238,7 @@
           </section>
 
           <section class="albatross body-text">
-            <h3 class="sub-title">Albatross (Nepal)
+            <h3 class="sub-title">Albatross
               <span>
                 <a href="http://albatrossnepal.bandcamp.com/music" target="_blank"><i class="fa fa-external-link-square hvr-float" aria-hidden="true"></i></a>
                 <a href="https://www.facebook.com/albatrossktm/" target="_blank"><i class="fa fa-facebook-square hvr-float" aria-hidden="true"></i></a>
@@ -246,20 +261,9 @@
 
 
     </div>
-    <hr>
+
     <!-- Footer -->
-    <footer class="footer">
-      <div class="row">
-        <div class="col-lg-12">
-          <a href="https://github.com/designsbydali" target="_blank"><i class="fa fa-github-square fa-3x hvr-float" aria-hidden="true"></i></a>
-          <a href="https://twitter.com/dalishirish" target="_blank"><i class="fa fa-twitter fa-3x hvr-float"  aria-hidden="true"></i></a>
-          <a href="https://www.linkedin.com/in/designsbydali?trk=hp-identity-name" target="_blank"><i class="fa fa-linkedin-square fa-3x hvr-float" aria-hidden="true"></i></a>
-          <a href="https://medium.com/@shirishdali" target="_blank"><i class="fa fa-medium fa-3x hvr-float"  aria-hidden="true"></i></a>
-          <p class="body-text footer-text">Copyright &copy; Designs By Dali 2016</p>
-        </div>
-      </div>
-      <!-- /.row -->
-    </footer>
+
 
   </div>
   <!-- /.container -->
