--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </ul>
       </div> -->
       <!-- /.navbar-collapse -->
-      <footer class="footer">
+      <header class="header">
         <div class="row">
           <div class="col-lg-12 menu">
             <a href="https://github.com/designsbydali" target="_blank"><i class="fa fa-github-square fa-3x hvr-float" aria-hidden="true"></i></a>
@@ -76,7 +76,8 @@
 
           </div>
         </div>
-      </footer>
+      </header>
+
 
     </div>
     <!-- /.container -->
@@ -205,8 +206,8 @@
         </div>
 
         <div id="education">
+          <h3 class="right-title title">Education</h3>
           <section class="ga body-text">
-            <h3 class="right-title title">Education</h3>
             <h3 class="sub-title">Web Developer</h3>
             <p class="city">General Assembly, Austin</p>
             <p class="date">October 2016</p>
@@ -242,7 +243,7 @@
               <span>
                 <a href="http://albatrossnepal.bandcamp.com/music" target="_blank"><i class="fa fa-external-link-square hvr-float" aria-hidden="true"></i></a>
                 <a href="https://www.facebook.com/albatrossktm/" target="_blank"><i class="fa fa-facebook-square hvr-float" aria-hidden="true"></i></a>
-                <a href="#" target="_blank"><i class="fa fa-spotify hvr-float" aria-hidden="true"></i></a>
+                <a><i class="fa fa-spotify hvr-float" aria-hidden="true"></i></a>
               </span>
             </h3>
             <p class="city">Kathmandu, Nepal</p>
