--- a/index.html
+++ b/index.html
@@ -36,47 +36,17 @@
   <!-- Navigation -->
   <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <div class="container">
-      <!-- Brand and toggle get grouped for better mobile display -->
-      <!-- <div class="navbar-header"> -->
-        <!-- <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-        </button> -->
-        <!-- <a class="navbar-brand" href="#"><img src="./img/dbdLogo.png" height="90" width="200" /></a> -->
 
-        <a class="navbar-brand" href="#">DesignsByDali</a>
-
-          <!-- /.row -->
-
-      <!-- </div> -->
-      <!-- Collect the nav links, forms, and other content for toggling -->
-      <!-- <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav">
-          <li>
-            <a href="#">About</a>
-          </li>
-          <li>
-            <a href="#">Services</a>
-          </li>
-          <li>
-            <a href="#">Contact</a>
-          </li>
-        </ul>
-      </div> -->
-      <!-- /.navbar-collapse -->
-      <header class="header">
-        <div class="row">
-          <div class="col-lg-12 menu">
-            <a href="https://github.com/designsbydali" target="_blank"><i class="fa fa-github-square fa-3x hvr-float" aria-hidden="true"></i></a>
-            <a href="https://twitter.com/dalishirish" target="_blank"><i class="fa fa-twitter fa-3x hvr-float"  aria-hidden="true"></i></a>
-            <a href="https://www.linkedin.com/in/designsbydali?trk=hp-identity-name" target="_blank"><i class="fa fa-linkedin-square fa-3x hvr-float" aria-hidden="true"></i></a>
-            <a href="https://medium.com/@shirishdali" target="_blank"><i class="fa fa-medium fa-3x hvr-float"  aria-hidden="true"></i></a>
-
-          </div>
-        </div>
-      </header>
+          <header class="header">
+            <div class="row">
+              <div class="col-lg-12 menu">
+                <a href="https://github.com/designsbydali" target="_blank"><i class="fa fa-github-square fa-3x hvr-float" aria-hidden="true"></i></a>
+                <a href="https://twitter.com/dalishirish" target="_blank"><i class="fa fa-twitter fa-3x hvr-float"  aria-hidden="true"></i></a>
+                <a href="https://www.linkedin.com/in/designsbydali?trk=hp-identity-name" target="_blank"><i class="fa fa-linkedin-square fa-3x hvr-float" aria-hidden="true"></i></a>
+                <a href="https://medium.com/@shirishdali" target="_blank"><i class="fa fa-medium fa-3x hvr-float"  aria-hidden="true"></i></a>
+              </div>
+            </div>
+          </header>
 
 
     </div>
@@ -86,17 +56,16 @@
   <!-- Page Content -->
   <div class="container animated fadeInDown">
     <div class="row">
-      <!-- <div class="col-md-2 portfolio-item">
-      </div> -->
+
       <!-- Left Column -->
       <div class=" col-lg-4 col-sm-4 col-md-4 col-md-offset-0 left">
         <h1 class="title name">Shirish Dali</h1>
         <h5 class="tag">Web Developer | Graphic Designer | Musician</h5>
         <section class="myinfo">
-          <h5>designsbydali@gmail.com</h5>
-          <h5>+1 808-319-8379</h5>
-        <hr>
+          <a class="email" href="mailto:designsbydali@gmail.com">designsbydali@gmail.com</a>
+          <a class="phone" href="tel:808-319-8379">808.319.8379</a>
         </section>
+        <hr>
         <h3 class="left-title title">Profile</h3>
         <section class="profile">
           <blockquote class="brand-statement">
