applied font anti aliased to the body

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
           <header class="header">
             <div class="row">
               <div class="col-lg-12 menu">
+                <a href="#"><i class="fa fa-print fa-3x hvr-float" aria-hidden="true"></i></a>
                 <a href="https://github.com/designsbydali" target="_blank"><i class="fa fa-github-square fa-3x hvr-float" aria-hidden="true"></i></a>
                 <a href="https://twitter.com/dalishirish" target="_blank"><i class="fa fa-twitter fa-3x hvr-float"  aria-hidden="true"></i></a>
                 <a href="https://www.linkedin.com/in/designsbydali?trk=hp-identity-name" target="_blank"><i class="fa fa-linkedin-square fa-3x hvr-float" aria-hidden="true"></i></a>
@@ -62,7 +63,7 @@
         <h1 class="title name">Shirish Dali</h1>
         <h5 class="tag">Web Developer | Graphic Designer | Musician</h5>
         <section class="myinfo">
-          <a class="email" href="mailto:designsbydali@gmail.com">designsbydali@gmail.com</a>
+          <a class="email" href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=info@albatross.com.np">designsbydali@gmail.com</a>
           <a class="phone" href="tel:808-319-8379">808.319.8379</a>
         </section>
         <hr>
