--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <header class="header">
             <div class="row">
               <div class="col-lg-12 menu">
-                <a href="#"><i class="fa fa-print fa-3x hvr-float" aria-hidden="true"></i></a>
+                <a href="./img/shrishdali-resume.pdf"><i class="fa fa-print fa-3x hvr-float" aria-hidden="true"></i></a>
                 <a href="https://github.com/designsbydali" target="_blank"><i class="fa fa-github-square fa-3x hvr-float" aria-hidden="true"></i></a>
                 <a href="https://twitter.com/dalishirish" target="_blank"><i class="fa fa-twitter fa-3x hvr-float"  aria-hidden="true"></i></a>
                 <a href="https://www.linkedin.com/in/designsbydali?trk=hp-identity-name" target="_blank"><i class="fa fa-linkedin-square fa-3x hvr-float" aria-hidden="true"></i></a>
@@ -48,22 +48,19 @@
               </div>
             </div>
           </header>
-
-
     </div>
     <!-- /.container -->
   </nav>
 
   <!-- Page Content -->
-  <div class="container animated fadeInDown">
+  <div class="container animate fadeInDown">
     <div class="row">
-
       <!-- Left Column -->
       <div class=" col-lg-4 col-sm-4 col-md-4 col-md-offset-0 left">
         <h1 class="title name">Shirish Dali</h1>
         <h5 class="tag">Web Developer | Graphic Designer | Musician</h5>
         <section class="myinfo">
-          <a class="email" href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=info@albatross.com.np">designsbydali@gmail.com</a>
+          <a class="email" href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=info@albatross.com.np" target="_blank" >designsbydali@gmail.com</a>
           <a class="phone" href="tel:808-319-8379">808.319.8379</a>
         </section>
         <hr>
@@ -113,10 +110,47 @@
 
         </div>
       </div>
-      <!-- mid column -->
+
+      <!-- Projects -->
       <div class="right col-lg-4 col-sm-4 col-md-4 portfolio-item">
         <div id="projects">
           <h3 class="right-title title">Projects</h3>
+
+          <section class="albatross body-text">
+            <h3 class="sub-title">Albatross Band Site
+              <span>
+                <a href="https://designsbydali.github.io/albatross/" target="_blank"><i class="fa fa-external-link-square hvr-float" aria-hidden="true"></i></a>
+                <a href="https://github.com/designsbydali/albatross" target="_blank"><i class="fa fa-github-square hvr-float" aria-hidden="true"></i></a>
+              </span>
+            </h3>
+            <p class="city">Austin, TX</p>
+            <p class="date">September 2016</p>
+            <p>
+              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+            <span class="label label-success">HTML</span>
+            <span class="label label-success">CSS</span>
+            <span class="label label-success">Bootstrap</span>
+            <span class="label label-success">Javascript</span>
+          </section>
+
+          <section class="portfolio body-text">
+            <h3 class="sub-title">Portfolio
+              <span>
+                <!-- <a href="#" target="_blank"><i class="fa fa-external-link-square hvr-float" aria-hidden="true"></i></a> -->
+                <a href="https://github.com/designsbydali/designsbydali.github.io" target="_blank"><i class="fa fa-github-square hvr-float" aria-hidden="true"></i></a>
+              </span>
+            </h3>
+            <p class="city">General Assembly, Austin</p>
+            <p class="date">September 2016</p>
+            <p>
+              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+            <span class="label label-success">HTML</span>
+            <span class="label label-success">CSS</span>
+            <span class="label label-success">Bootstrap</span>
+            <span class="label label-success">Javascript</span>
+          </section>
 
           <section class="petfinder">
             <h3 class="sub-title body-text">Petfinder API
@@ -140,8 +174,8 @@
             <h3 class="sub-title">The Lyricist
               <span>
                 <a href="https://oiseaunoir.github.io/Lyricist/" target="_blank"><i class="fa fa-external-link-square hvr-float" aria-hidden="true"></i></a>
-                <a href="https://lyricist-api.herokuapp.com/lyrics" target="_blank"><i class="fa fa-database hvr-float" aria-hidden="true"></i></a>
-                <a href="https://github.com/OiseauNoir/Lyricist" target="_blank"><i class="fa fa-github-square hvr-float" aria-hidden="true"></i></a>
+                <a href="https://github.com/designsbydali/Lyricist_api" target="_blank"><i class="fa fa-database hvr-float" aria-hidden="true"></i></a>
+                <a href="https://github.com/designsbydali/Lyricist" target="_blank"><i class="fa fa-github-square hvr-float" aria-hidden="true"></i></a>
               </span>
             </h3>
             <p class="city">General Assembly, Austin</p>
@@ -156,23 +190,7 @@
             <span class="label label-success">mongoDB</span>
           </section>
 
-          <section class="portfolio body-text">
-            <h3 class="sub-title">Portfolio
-              <span>
-                <a href="#" target="_blank"><i class="fa fa-external-link-square hvr-float" aria-hidden="true"></i></a>
-                <a href="#" target="_blank"><i class="fa fa-github-square hvr-float" aria-hidden="true"></i></a>
-              </span>
-            </h3>
-            <p class="city">General Assembly, Austin</p>
-            <p class="date">September 2016</p>
-            <p>
-              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-            </p>
-            <span class="label label-success">HTML</span>
-            <span class="label label-success">CSS</span>
-            <span class="label label-success">Bootstrap</span>
-            <span class="label label-success">Javascript</span>
-          </section>
+
         </div>
       </div>
       <!-- right column -->
@@ -195,15 +213,13 @@
           <section class="albatross body-text">
             <h3 class="sub-title">Albatross
               <span>
-                <a href="http://albatrossnepal.bandcamp.com/music" target="_blank"><i class="fa fa-external-link-square hvr-float" aria-hidden="true"></i></a>
-                <a href="https://www.facebook.com/albatrossktm/" target="_blank"><i class="fa fa-facebook-square hvr-float" aria-hidden="true"></i></a>
-                <a><i class="fa fa-spotify hvr-float" aria-hidden="true"></i></a>
+                <a href="https://designsbydali.github.io/albatross/" target="_blank"><i class="fa fa-external-link-square hvr-float" aria-hidden="true"></i></a>
+                <a href="https://github.com/designsbydali/albatross" target="_blank"><i class="fa fa-github-square hvr-float" aria-hidden="true"></i></a>
               </span>
             </h3>
             <p class="city">Kathmandu, Nepal</p>
             <p class="date">March 2010</p>
             <p class="body-text">Frontman of the band, singer/songwriter. Worked on a total of 3 albums.</p>
-            <iframe src="https://embed.spotify.com/?uri=spotify%3Aartist%3A0MFaU2hPTonjVegaYIh5VV" width="300" height="80" frameborder="0" allowtransparency="true"></iframe>
           </section>
         </div>
         <div id="education">
