--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <header class="header">
             <div class="row">
               <div class="col-lg-12 menu">
-                <a href="img/shrishdali-resume.pdf"><i class="fa fa-print fa-3x hvr-float" aria-hidden="true"></i></a>
+                <a href="shrishdali-resume.pdf"><i class="fa fa-print fa-3x hvr-float" aria-hidden="true"></i></a>
                 <a href="https://github.com/designsbydali" target="_blank"><i class="fa fa-github-square fa-3x hvr-float" aria-hidden="true"></i></a>
                 <a href="https://twitter.com/dalishirish" target="_blank"><i class="fa fa-twitter fa-3x hvr-float"  aria-hidden="true"></i></a>
                 <a href="https://www.linkedin.com/in/designsbydali?trk=hp-identity-name" target="_blank"><i class="fa fa-linkedin-square fa-3x hvr-float" aria-hidden="true"></i></a>
