updated project info

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             <p class="city">Austin, TX</p>
             <p class="date">September 2016</p>
             <p>
-              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+              Created a static site of the band. Incorporated the bands multiple social media accounts into this showcasing website.
             </p>
             <span class="label label-success">HTML</span>
             <span class="label label-success">CSS</span>
@@ -144,7 +144,7 @@
             <p class="city">General Assembly, Austin</p>
             <p class="date">September 2016</p>
             <p>
-              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+              A collection of various projects done during taking the developer course at General Assembly.
             </p>
             <span class="label label-success">HTML</span>
             <span class="label label-success">CSS</span>
@@ -162,7 +162,7 @@
             <p class="city">General Assembly, Austin</p>
             <p class="date">September 2016</p>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+              The main goal of the app was to match people searching to adopt pets within a list of adptable pets. We hit the Petfinder API to access a list of pets available for adoption as well as created our own databae of a list of pets.
             </p>
             <span class="label label-success">Bootstrap</span>
             <span class="label label-success">node.js</span>
@@ -181,7 +181,7 @@
             <p class="city">General Assembly, Austin</p>
             <p class="date">September 2016</p>
             <p>
-              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+              A simple app to find lyrics to your favorite songs. The app returns the user with the lyrics and the first 3 video matches of the song on Youtube.
             </p>
             <span class="label label-success">Bootstrap</span>
             <span class="label label-success">React</span>
