--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   </nav>
 
   <!-- Page Content -->
-  <div class="container animate fadeInDown">
+  <div class="container animated fadeInDown">
     <div class="row">
       <!-- Left Column -->
       <div class=" col-lg-4 col-sm-4 col-md-4 col-md-offset-0 left">
