--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@
         <h3 class="left-title title">Profile</h3>
         <section class="profile">
           <blockquote class="brand-statement">
-            "As a web developer, I look forward to transforming ideas into clean code and user-friendly websites. In addition to my degree in Graphic Design and my continued education in Web Development, I bring with me powerful communication skills and a strong
-            foundation in design principles. I seek to work with an innovative company on projects that have meaning and will make an impact."
+            "I enjoy transforming ideas into clean code and user-friendly sites. With a degree in graphic design and my continued education in web development, I bring powerful communication skills and a strong foundation in design principles. I seek to work for an innovative company on projects that make an impact."
           </blockquote>
         </section>
         <hr>
