--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
         <h1 class="title name">Shirish Dali</h1>
         <h5 class="tag">Web Developer | Graphic Designer | Musician</h5>
         <section class="myinfo">
-          <a class="email" href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=designsbydali@gmail.com" target="_blank" >designsbydali@gmail.com</a>
-          <a class="phone" href="tel:808-319-8379">808.319.8379</a>
+          <a id="email" href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=designsbydali@gmail.com" target="_blank" >designsbydali@gmail.com</a><br>
+          <a id="phone" href="tel:808-319-8379">808.319.8379</a>
         </section>
         <hr>
         <h3 class="left-title title">Profile</h3>
